[FFVT] Fix Alert content overflowing the container

--- a/src/tools/file-format-verification/FFVT.css
+++ b/src/tools/file-format-verification/FFVT.css
@@ -69,6 +69,9 @@
   background-color: #f9dede;
 }
 
+.FFVT .ParseErrors .alert-body {
+  display: block; /* Fix for content overflowing in IE */
+}
 
 @media screen and (max-width: 800px) {
   #main-content.FFVT .grid .item {
